--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,13 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #2274A5;
+
+// Colors
+$primary: #FFBF00;
+$secondary: #2274A5;
+$third: #32936F;
+$other: #FFFFFF;
+$accent: #E83F6F;
+
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
