17/08-18/08 commit. Big changes, for the better
18/08 Begin 11:20 Heel de dag bezig geweest om een de Openlayers api(maps) op te zetten. Ik koos voor deze API omdat je verplicht bent om een credit card op te geven wanneer je de Google Maps API wilt gebruiken. Heb dan uiteindelijk moeten beslissen om dan maar een credit card te regelen aangezien je longitude en latitude niet kunt decoderen zonder de google maps api. Dan kan ik maar beter heel de maps api gebruiken aangezien deze goed gedocumenteerd is en er zijn genoeg guides om deze fatsoenlijk op te zetten. Heb dan maar registratie verbeterd zodat voedselbanken een account kunnen maken zonder iets extra hoeven te doen. Heel wat dingen verplaatst en op de plek gezet zoals ik heb uitgetekend. Eind 19:37
20:42 Begin Google Maps API opgezet. Hier dan ook de functionaliteiten aangepast en ervoor gezorgd dat alle voedselbanken met een lat & lng erin worden geladen. Hier is dan ook meteen een onclick bij waar ze dan kleine info kunnen zien v/d voedselbank. Bij het registreren van een user en voedselbank wordt er meteen gezocht naar een lat & lng en ingeladen in het DB.
Eind: 01:00.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 // Globals
 @import 'globals.scss';
-
+@import 'pages/home.scss';
 // Partials
 @import 'partials/menu.scss';
 
