--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3048,6 +3048,13 @@
   color: #2274A5 !important;
 }
 
+.map {
+  display: block;
+  float: right;
+  height: 400px;
+  width: 50%;
+}
+
 .notification {
   text-decoration: none !important;
   position: relative !important;
@@ -3143,7 +3150,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #2274A5;
+  background-color: #FFFFFF;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -3581,7 +3588,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #2274A5;
+  background-color: #FFFFFF;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -7313,15 +7320,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #2274A5, 0 0 0 0.2rem rgba(255, 191, 0, 0.25);
+  box-shadow: 0 0 0 1px #FFFFFF, 0 0 0 0.2rem rgba(255, 191, 0, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #2274A5, 0 0 0 0.2rem rgba(255, 191, 0, 0.25);
+  box-shadow: 0 0 0 1px #FFFFFF, 0 0 0 0.2rem rgba(255, 191, 0, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #2274A5, 0 0 0 0.2rem rgba(255, 191, 0, 0.25);
+  box-shadow: 0 0 0 1px #FFFFFF, 0 0 0 0.2rem rgba(255, 191, 0, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -7527,8 +7534,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #2274A5;
-  border-color: #dee2e6 #dee2e6 #2274A5;
+  background-color: #FFFFFF;
+  border-color: #dee2e6 #dee2e6 #FFFFFF;
 }
 
 .nav-tabs .dropdown-menu {
