19/08 verder vorderingen. Back end heeft veel core aspecten al. Nog veel finetuning en front end nodig
19/08: Begin 08:30 verder aan Google maps API gewerkt. Nu kan een user een voedselbank aanduiden en wordt deze ook gesubmit bij het invullen van de goodiebag form. Hier dan ook de validation meer ingestoken. Geprobeerd om de directions api aan de praat te krijgen maar nog niet gelukt. Het scherm dat hierna volgt is al aangemaakt met een thank you + overzicht. User krijgt hierbij een code die hij/zij moet laten zien aan de voedsel bank om zo te confirmeren dat deze is afgegeven. Wil hiervan nog een QR-code maken. De user krijgt hierna “treasures”. Als de user nog geen account heeft wordt hij eerste geleid naar de login waarna hij deze “treasures” dan krijgt bij zijn account. Verder het begin van de dashboard voor user/foodbank gemaakt. QR-code is nu aangemaakt en werkt ook. Deze wordt gescanned door de voedselbank die dan daardoor de goodiebag ontvangt en accepteerd. Verder nog feedback gekregen van een huisgenoot om misschien een user rating erin te implementeren, dat users kunnen worden beoordeeld om zo te vermijden dat mensen rotzooi dumpen aan de voedselbanken. Eind 18:30
Begin 19:30 Gerekend hvl voor welke producten ik “treasures” aka punten ga geven. Heb alles berekend hoeveel dat een gemiddelde persoon nodig heeft per dag en daar dan dat 1 treasure dan een volledige dag van voedsel zou zijn voor een persoon. Heb dan ook het gemiddelde gewicht van een stuk fruit en groenten berekend waarop ik mijn “zoveel voedsel is niet weg gegooid” zal baseren. Heb dit dan ook deels in het database gezet en zal hier dan morgen afhebben. Eind 22:30

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3078,6 +3078,13 @@
   color: white !important;
 }
 
+#map {
+  display: block !important;
+  float: right !important;
+  height: 400px !important;
+  width: 50% !important;
+}
+
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
