--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'pages/home.scss';
 // Partials
 @import 'partials/menu.scss';
+@import 'partials/map.scss';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
