--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3085,6 +3085,14 @@
   width: 50% !important;
 }
 
+#map-code {
+  display: block !important;
+  float: right !important;
+  height: 400px !important;
+  width: 100% !important;
+  margin-top: 20px !important;
+}
+
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
