--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 // Partials
 @import 'partials/menu.scss';
 @import 'partials/map.scss';
+@import 'partials/map-code.scss';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
