--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans&display=swap);@charset "UTF-8";
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
@@ -3044,15 +3044,214 @@
   clip: auto;
 }
 
+#app {
+  position: relative;
+  min-height: 100vh;
+  padding: 50px !important;
+  font-family: "Fira Sans", sans-serif;
+  overflow: hidden;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
 .card-header {
   color: #2274A5 !important;
 }
 
-.map {
-  display: block;
-  float: right;
-  height: 400px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bebas Neue", cursive;
+}
+
+body {
+  margin: 0px;
+  font-family: "Arial";
+}
+
+.example {
+  padding: 20px;
+}
+
+input[type=button] {
+  padding: 5px 10px;
+  margin: 10px 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #ddd;
+  border: 1px solid #ccc;
+}
+
+input[type=button]:hover {
+  background: #ccc;
+}
+
+.confirm {
+  display: none;
+}
+
+.confirm > div:first-of-type {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0px;
+  left: 0px;
+}
+
+.confirm > div:last-of-type {
+  padding: 10px 20px;
+  background: white;
+  position: absolute;
+  width: auto;
+  height: auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  border: 1px solid #333;
+}
+
+.confirm > div:last-of-type div:first-of-type {
+  min-width: 150px;
+  padding: 10px;
+}
+
+.confirm > div:last-of-type div:last-of-type {
+  text-align: right;
+}
+
+.star-rating {
+  line-height: 32px !important;
+  font-size: 1.25em !important;
+}
+
+.star-rating .fa-star {
+  color: yellow;
+}
+
+#app {
+  background: #05668d;
+  background: linear-gradient(115deg, #05668d 0%, #00a896 35%, #02c39a 100%);
+}
+
+.landing-page .home-boxes {
+  display: flex;
+  margin-top: 50px;
+  color: white;
+}
+
+.landing-page .home-boxes h3 {
+  font-size: 4rem;
+}
+
+.landing-page .home-boxes > div {
   width: 50%;
+}
+
+.landing-page .home-boxes .left {
+  padding-right: 100px;
+  text-align: right;
+}
+
+.landing-page .home-boxes .left .donate-btn {
+  margin-top: 50px !important;
+}
+
+.landing-page .home-boxes .left .button1 {
+  background-color: white;
+  padding: 15px;
+  color: #00a896;
+  border: 2px solid white;
+  border-radius: 40px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.landing-page .home-boxes .right {
+  padding-left: 100px;
+  text-align: left;
+}
+
+.landing-page .illustration1,
+.landing-page .illustration2 {
+  width: 350px;
+}
+
+.landing-page .home-boxes-2 {
+  display: flex;
+  color: white;
+}
+
+.landing-page .home-boxes-2 h3 {
+  font-size: 4rem;
+}
+
+.landing-page .home-boxes-2 div {
+  width: 50%;
+}
+
+.landing-page .home-boxes-2 .left {
+  padding-right: 100px;
+  text-align: right;
+}
+
+.landing-page .home-boxes-2 .right {
+  padding-left: 100px;
+  text-align: left;
+}
+
+.landing-page .home-boxes-2 .right .register-btn {
+  margin-top: 50px !important;
+}
+
+.landing-page .home-boxes-2 .right .button1 {
+  background-color: white;
+  padding: 15px;
+  color: #00a896;
+  border: 2px solid white;
+  border-radius: 40px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.plus-minus-input {
+  align-items: center;
+}
+
+.plus-minus-input .input-group-field {
+  text-align: center;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 1rem;
+}
+
+.plus-minus-input .input-group-field::-webkit-inner-spin-button,
+.plus-minus-input .input-group-field ::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+          appearance: none;
+}
+
+.plus-minus-input .input-group-button .circle {
+  border-radius: 50%;
+  padding: 0.25em 0.8em;
+}
+
+#goodiebag-submitbtn {
+  width: 50%;
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
+  #map-goodiebag {
+    height: unset !important;
+  }
 }
 
 .notification {
@@ -3078,11 +3277,18 @@
   color: white !important;
 }
 
-#map {
+.map {
+  display: block;
+}
+
+#map-goodiebag {
   display: block !important;
-  float: right !important;
-  height: 400px !important;
-  width: 50% !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+#map-goodiebag img {
+  max-width: none;
 }
 
 #map-code {
@@ -3091,6 +3297,53 @@
   height: 400px !important;
   width: 100% !important;
   margin-top: 20px !important;
+}
+
+.navbar {
+  box-shadow: none !important;
+  background-color: transparent;
+}
+
+.navbar .nav-link {
+  color: white !important;
+  padding: 0 !important;
+  margin: 5px;
+  border-bottom: 1px solid transparent;
+}
+
+.navbar .nav-link:hover {
+  color: white !important;
+  border-bottom: 1px solid white;
+}
+
+.navbar .navbar-nav.navbar-center {
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
+}
+
+.navbar .make-goodiebag-btn {
+  padding: 15px;
+  color: white;
+  border: 2px solid white;
+  border-radius: 40px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.25s ease;
+}
+
+.navbar .make-goodiebag-btn:hover {
+  color: #00a896;
+  background-color: #fff;
+  transition: all 0.25s ease;
+}
+
+.navbar .container svg {
+  fill: #fff;
+}
+
+.footer-class small {
+  color: white !important;
 }
 
 /*!
