--- a/resources/sass/globals.scss
+++ b/resources/sass/globals.scss
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans&display=swap');
+
+#app {
+    position: relative;
+    min-height: 100vh;
+    padding: 50px !important;
+
+
+    font-family: 'Fira Sans', sans-serif;
+    overflow: hidden;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
 .card-header {
     color: $secondary !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: 'Bebas Neue', cursive;
 }
