--- a/resources/sass/partials/map.scss
+++ b/resources/sass/partials/map.scss
@@ -1,6 +1,4 @@
-#map {
-    display: block !important;
-    float: right !important;
-    height: 400px !important;
-    width: 50% !important;
-    }
+.map {
+    display: block;
+  }
+  
