--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,8 +11,9 @@
 @import 'pages/code-show.scss';
 @import 'pages/dashboard.scss';
 @import 'pages/landing-page.scss';
-
-// @import 'pages/foodbank.scss';
+@import 'pages/login.scss';
+@import 'pages/register.scss';
+@import 'pages/reset-pw.scss';
 @import 'pages/welcome.scss';
 // Partials
 @import 'partials/menu.scss';
@@ -21,6 +22,7 @@
 @import 'partials/map-code.scss';
 @import 'partials/header.scss';
 @import 'partials/footer.scss';
+
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
