--- a/resources/sass/pages/welcome.scss
+++ b/resources/sass/pages/welcome.scss
@@ -1,33 +1,63 @@
 .plus-minus-input {
-    align-items: center;
+    align-items: center !important;
   
     .input-group-field {
-      text-align: center;
-      margin-left: 0.5rem;
-      margin-right: 0.5rem;
-      padding: 1rem;
+      display: flex;
+      text-align: center !important;
+      margin-left: 0.5rem !important;
+      margin-right: 0.5rem !important;
+      padding: 1rem !important;
   
       &::-webkit-inner-spin-button,
       ::-webkit-outer-spin-button {
-        appearance: none;
+        appearance: none !important;
       }
     }
-  
     .input-group-button {
       .circle {
-        border-radius: 50%;
-        padding: 0.25em 0.8em;
+        border-radius: 50% !important;
+        padding: 0.25em 0.8em !important;
+        -webkit-border-radius: 50% !important;
+        -moz-border-radius: 50% !important;
+        -ms-border-radius: 50% !important;
+        -o-border-radius: 50% !important;
       }
     }
-  }
-  #goodiebag-submitbtn {
-    width: 50%;
 }
+
+#input-food {
+  display: flex;
+  width: 20%;
+  height: calc(1.6em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+#goodiebag-submitbtn {
+  width: 50% !important;
+  background-color: #05668d !important;
+}
+#map-goodiebag {
+  width: 100%;
+  height: 100%;
+  }
   @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 812px) {
-    #map-goodiebag {
-        height: unset !important;
-    }
+
 }
   
+@media screen and (max-width: 992px) {
+  .col-map {
+    margin-top: 50px !important;
+    width: 100% !important;
+    height: 500px !important;
+  }
+}
