--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,7 +14,9 @@
 @import 'pages/login.scss';
 @import 'pages/register.scss';
 @import 'pages/reset-pw.scss';
-@import 'pages/welcome.scss';
+@import 'pages/foodbank.scss';
+@import 'pages/foodbank-id.scss';
+@import 'pages/create-goodie.scss';
 // Partials
 @import 'partials/menu.scss';
 @import 'partials/map.scss';
