--- a/resources/sass/globals.scss
+++ b/resources/sass/globals.scss
@@ -13,6 +13,7 @@
 footer {
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 2.5rem;
 }
@@ -27,4 +28,64 @@ h3,
 h4,
 h5 {
     font-family: 'Bebas Neue', cursive;
+}
+
+.button1 {
+    background-color: white;
+    padding: 15px;
+    color: #00a896;
+    border: 2px solid white;
+    border-radius: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.button1:hover {
+    background-color: transparent;
+    padding: 15px;
+    color: white;
+    border: 2px solid white;
+    border-radius: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.button2 {
+    background-color: #00a896;
+    padding: 15px;
+    color: white;
+    border: 2px solid #00a896;
+    border-radius: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.button2:hover {
+    background-color: white;
+    padding: 15px;
+    color: #00a896;
+    border: 2px solid #00a896;
+    border-radius: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=name]:focus,
+input[type=postalcode]:focus,
+input[type=address]:focus,
+input[type=city]:focus,
+input[type=country]:focus,
+input[type=province]:focus,
+input[type=tel]:focus,
+input[type=password]:focus {
+    border-color: rgba(82, 168, 236, .8);
+    outline: 0;
+    outline: thin dotted \9;
+    -moz-box-shadow: 0 0 8px rgba(0, 168, 151, 0.5);
+    box-shadow: 0 0 8px rgba(0, 168, 151, 0.5) !important;
 }
