--- a/resources/sass/pages/dashboard.scss
+++ b/resources/sass/pages/dashboard.scss
@@ -1,6 +1,23 @@
-.star-rating {
-    line-height:32px !important;
-    font-size:1.25em !important;
-  }
-  
-  .star-rating .fa-star{color: yellow;}
+.rating {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+  font-size: 20px;
+}
+.rating > span {
+  position: relative;
+  width: 1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+   content: "\2605";
+   position: absolute;
+}
+
+@media screen and (max-width: 692px) {
+    .rating {
+      display: none;
+    }
+    .rating-title {
+      display: none;
+    }
+}
