--- a/resources/sass/pages/create-goodie.scss
+++ b/resources/sass/pages/create-goodie.scss
@@ -16,11 +16,15 @@
             margin-left: 0.5rem !important;
             margin-right: 0.5rem !important;
             padding: 1rem !important;
-
+            
             &::-webkit-inner-spin-button,
             ::-webkit-outer-spin-button {
                 appearance: none !important;
             }
+        }
+        // Mozilla firefox gives ugly buttons in field if this is not applied
+        [type=number] {
+            -moz-appearance: textfield;
         }
 
         .input-group-button {
@@ -34,7 +38,6 @@
             }
         }
     }
-
     #input-food {
         display: flex;
         width: 20%;
@@ -71,6 +74,9 @@
             padding: 0;
 
             .col-map {
+                margin-top: 50px !important;
+                width: 100% !important;
+                height: 100% !important;
                 padding: 0 !important;
                 margin: 0 !important;
             }
@@ -89,22 +95,87 @@
         }
     }
 
-    .col-map {
-        margin-top: 50px !important;
-        width: 100% !important;
-        height: 100% !important;
-    }
-
     .btn-sm,
     .btn-sm:focus {
         outline: none !important;
     }
+}
+/* The Modal (background) */
+.modal {
+    display: none;   
+    position: fixed; 
+    z-index: 1;   
+    left: 0;
+    top: 0;
+    width: 100%;  
+    height: 100%;  
+    overflow: auto;  
+    background-color: rgb(0,0,0);  
+    background-color: rgba(0,0,0,0.4);  
 
-    @media screen and (max-width: 992px) {
-        .col-map {
-            margin-top: 50px !important;
-            width: 100% !important;
-            height: 100% !important;
+    /* Modal Content/Box */
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;  
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;  
+
+        /* The Close Button */
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
         }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+
+        }
+                
+        .p-pop-up {
+            padding: 5px !important;
+            margin-left: 20px !important;
+        }   
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .create-goodie-page {
+        .card-deck {
+            display: grid;
+            grid-gap: 1rem;
+            .input-group label {
+                width: 25%;
+            }
+
+            .card-2 {
+                height: 500px !important;
+            }
+        }
+        .button1 {
+            width: 80%;
+        }
+    }
+}
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) { 
+    .create-goodie-page {
+
+    }
+
+}
+
+@media screen and (max-width: 575px) {
+    .create-goodie-page {
+
+
+
     }
 }
